; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/radio/extr_radio-isa.c_radio_isa_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/radio/extr_radio-isa.c_radio_isa_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.radio_isa_card = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @radio_isa_remove(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.radio_isa_card*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.radio_isa_card* @dev_get_drvdata(%struct.device* %6)
  store %struct.radio_isa_card* %7, %struct.radio_isa_card** %5, align 8
  %8 = load %struct.radio_isa_card*, %struct.radio_isa_card** %5, align 8
  %9 = load %struct.radio_isa_card*, %struct.radio_isa_card** %5, align 8
  %10 = getelementptr inbounds %struct.radio_isa_card, %struct.radio_isa_card* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @radio_isa_common_remove(%struct.radio_isa_card* %8, i32 %13)
  ret i32 %14
}

declare dso_local %struct.radio_isa_card* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @radio_isa_common_remove(%struct.radio_isa_card*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
